[gd_scene load_steps=7 format=3 uid="uid://6vj0l6kel1vx"]

[ext_resource type="Script" path="res://godot/scr/ship.gd" id="1_8vnpd"]
[ext_resource type="Texture2D" uid="uid://cas1wx1mbedlo" path="res://external/png/ship1/ship1.png" id="2_r4s2x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_es16l"]
atlas = ExtResource("2_r4s2x")
region = Rect2(21, 17, 42, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i800"]
atlas = ExtResource("2_r4s2x")
region = Rect2(1, 27, 14, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb2f0"]
atlas = ExtResource("2_r4s2x")
region = Rect2(1, 1, 18, 25)

[sub_resource type="Curve" id="Curve_4x1ui"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ship" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_8vnpd")

[node name="shipSpace" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
scale = Vector2(0.25, 0.25)
polygon = PackedVector2Array(3, -22, 4, -22, 4, -21, 5, -21, 5, -20, 6, -20, 6, -19, 7, -19, 7, -18, 8, -18, 8, -16, 9, -16, 9, -14, 10, -14, 10, -9, 11, -9, 11, -7, 12, -7, 12, -4, 13, -4, 13, -2, 14, -2, 14, 1, 15, 1, 15, 3, 16, 3, 16, 5, 17, 5, 17, 8, 18, 8, 18, 10, 19, 10, 19, 13, 20, 13, 20, 15, 21, 15, 21, 22, 20, 22, 20, 23, 9, 23, 9, 22, 8, 22, 8, 20, 7, 20, 7, 17, 6, 17, 6, 16, 5, 16, 5, 15, -5, 15, -5, 16, -6, 16, -6, 17, -7, 17, -7, 20, -8, 20, -8, 22, -9, 22, -9, 23, -19, 23, -19, 22, -21, 22, -21, 15, -20, 15, -20, 13, -19, 13, -19, 10, -18, 10, -18, 8, -17, 8, -17, 5, -16, 5, -16, 3, -15, 3, -15, 1, -14, 1, -14, -2, -13, -2, -13, -4, -12, -4, -12, -7, -11, -7, -11, -9, -10, -9, -10, -14, -9, -14, -9, -16, -8, -16, -8, -18, -7, -18, -7, -19, -6, -19, -6, -20, -5, -20, -5, -21, -4, -21, -4, -22, -3, -22, -3, -23, 3, -23)

[node name="shipParts" type="Node2D" parent="."]

[node name="shipBody" type="Sprite2D" parent="shipParts"]
rotation = 1.5708
scale = Vector2(0.25, 0.25)
texture = SubResource("AtlasTexture_es16l")

[node name="shipThruster" type="Sprite2D" parent="shipParts"]
position = Vector2(-5, 0)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
texture = SubResource("AtlasTexture_4i800")

[node name="shipCockpit" type="Sprite2D" parent="shipParts"]
rotation = 1.5708
scale = Vector2(0.25, 0.25)
texture = SubResource("AtlasTexture_eb2f0")

[node name="shipCamera" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(6, 6)
limit_left = -540
limit_top = -540
limit_right = 540
limit_bottom = 540
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="shipTrails" type="Node2D" parent="."]
position = Vector2(-5, 0)

[node name="shipTrailInside" type="Line2D" parent="shipTrails"]
top_level = true
z_index = -5
width = 4.0
width_curve = SubResource("Curve_4x1ui")
default_color = Color(0, 1, 1, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="shipTrailOutside" type="Line2D" parent="shipTrails"]
top_level = true
z_index = -5
width = 2.0
width_curve = SubResource("Curve_4x1ui")
begin_cap_mode = 2
end_cap_mode = 2
